--- a/config/config.yaml
+++ b/config/config.yaml
@@ -116,6 +116,8 @@ performance:
     win_rate_min: 0.35
     avg_rr_min: 1.3
     threshold_adjustment: 0.1
+  instant_push: true             # 止盈/止损触发后立即推送绩效卡片
+  instant_cooldown_minutes: 30   # 实时卡片推送最小间隔（分钟）
 
 notifications:
   lark_webhook: ""            # 飞书 Webhook（优先 .env）
