--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,12 @@
 # 交易品种列表
 symbols:
   - BTCUSDm
-  - ETHUSDm
+  - XAUUSDm
+
+live:
+  symbols:
+    - BTCUSDm
+    - XAUUSDm
 
 timeframes:
   lookback_bars: 320          # 各周期最多保留的K线数量
