chore: include ETHUSDm in defaults and docs

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,11 +3,13 @@
 # 交易品种列表
 symbols:
   - BTCUSDm
+  - ETHUSDm
   - XAUUSDm
 
 live:
   symbols:
     - BTCUSDm
+    - ETHUSDm
     - XAUUSDm
 
 timeframes:
