--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ ccxt = "^4.4.12"
 python-dotenv = "^1.0.1"
 SQLAlchemy = "^2.0.31"
 psycopg = { version = "^3.2.1", extras = ["binary"] }
+fastapi = "^0.115.0"
+uvicorn = { version = "^0.32.0", extras = ["standard"] }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
