chore: switch GLM endpoints to ezworkapi glm-4.5-air

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -147,5 +147,5 @@ log:
   level: DEBUG                # 日志级别
 
 # LLM 客户端环境变量提示（不在此文件中配置）：
-# - GLM_API_KEY / GLM_API_BASE（默认 https://open.bigmodel.cn/api/paas/v4/chat/completions）
+# - GLM_API_KEY / GLM_API_BASE（默认 https://api.ezworkapi.top/api/paas/v4/chat/completions）
 # - AIZEX_API_KEY / AIZEX_API_BASE（OpenAI 兼容，gpt-4o-mini）
