--- a/config/config.yaml
+++ b/config/config.yaml
@@ -48,10 +48,10 @@ data:
 
 llm:
   glm:
-    api_base: "https://api.ezworkapi.top/api/paas/v4/chat/completions"
+    api_base: "https://api.ezworkapi.top/v1/chat/completions"
     model: "glm-4.5-air"
   glm_fallback:
-    api_base: "https://api.ezworkapi.top/api/paas/v4/chat/completions"
+    api_base: "https://api.ezworkapi.top/v1/chat/completions"
     model: "glm-4.5-air"
   gpt4omini:
     api_base: "https://aizex.top"
@@ -158,5 +158,5 @@ log:
   level: DEBUG                # 日志级别
 
 # LLM 客户端环境变量提示（不在此文件中配置）：
-# - GLM_API_KEY / GLM_API_BASE（默认 https://api.ezworkapi.top/api/paas/v4/chat/completions）
+# - GLM_API_KEY / GLM_API_BASE（默认 https://api.ezworkapi.top/v1/chat/completions）
 # - AIZEX_API_KEY / AIZEX_API_BASE（OpenAI 兼容，gpt-4o-mini）
