--- a/config/config.yaml
+++ b/config/config.yaml
@@ -173,7 +173,7 @@ performance:
     avg_rr_min: 1.3
     threshold_adjustment: 0.1
   instant_push: true             # 止盈/止损触发后立即推送绩效卡片
-  instant_cooldown_minutes: 30   # 实时卡片推送最小间隔（分钟）
+  instant_cooldown_minutes: 0    # 实时卡片推送最小间隔（分钟），0 表示不限制
 
 notifications:
   lark_webhook: ""            # 飞书 Webhook（优先 .env）
@@ -184,4 +184,3 @@ log:
 # LLM 客户端环境变量提示（不在此文件中配置）：
 # - QWEN_API_KEY / QWEN_API_BASE / QWEN_MODEL（默认 https://api.ezworkapi.top, qwen-turbo-2025-07-15）
 # - AIZEX_API_KEY / AIZEX_API_BASE（OpenAI 兼容，gpt-4o-mini）
-
