--- a/config/config.yaml
+++ b/config/config.yaml
@@ -177,6 +177,7 @@ performance:
 
 notifications:
   lark_webhook: ""            # 飞书 Webhook（优先 .env）
+  backtest_enabled: true      # 回测是否推送飞书卡片
   ai_anomaly_enabled: true    # AI 异常卡片推送开关
   ai_anomaly_cooldown_minutes: 30  # AI 异常同类告警冷却（分钟）
 
